# laba1

./: CMakeLists.txt  main.c  stack.c  stack.h  stackChar.c  stackChar.h
